--- a/Files for Tests (GSB)/pom.xml
+++ b/Files for Tests (GSB)/pom.xml
@@ -2,17 +2,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
-  <artifactId>Test1</artifactId>
+  <artifactId>Tests.GamrSport-1.</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
-  <name>Archetype - Test1</name>
+  <name>Archetype - Tests.GamrSport-1.</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
-
     <dependency>
       <groupId>com.typesafe</groupId>
       <artifactId>config</artifactId>
@@ -56,5 +55,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.6.1</version>
+    </dependency>
   </dependencies>
+
 </project>
